# ce_engine

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  Ce_Plugin_docs.md  Doxyfile  LICENSE  Makefile  Makefile.old  README.md  TODO.md  archive.tcf  ce.rar  ce_engine  ce_engine.exe.lnk  cheats.md  data.tcf  docs.md  hello  imgui.ini  lua_docs.md  notsafe.lua  script.lua  startup.lua
.github/: copilot-instructions.md
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml  windows.yml
.old/: Makefile
Plugin-test/: CE_API.hpp  main.cpp
assets/: game.info
assets/licences/: ofl-ibm-licence.txt  raylib-licence.txt
assets_public/: Gameinfo.txt  startup.lua
ce/: imgui.ini
cheats/: raylib.md
include/: Vector3.hpp  bootstrap.h  bootstrap.hpp  globals.h  globals.hpp  math_util.h  utils.h
include/common/: MemoryUsage.hpp  console_link.hpp  ini.hpp  tdf.hpp
include/common/errorbox/: error_box.hpp
include/common/tcf/: tcf.h
include/engine/: UI.hpp  callbacks.hpp  common.hpp  engine.h  engine.hpp  lua.hpp  ui.hpp
include/engine/assets/: assets.hpp
include/engine/common/: error_box.hpp  vfs.hpp
include/engine/fio/: dir_remove.h
include/engine/modules/: CE_Background.h  CE_fps.h
include/engine/modules/lua/: CELua.h
include/engine/modules/settings/: settings.h
include/engine/modules/vid_player/: video.h
include/engine/platform/: posix.hpp  windows.hpp
include/engine/plugins/: plugins.hpp
include/engine/tex_man/: texture_manager.h
include/engine/ui/: startup_vid.h
include/engine/ui/main_menu/: main_menu_ui.h
include/engine/ui/settings_menu/: settings_ui.h
include/ui/: info_box.h  tgc.h
output/: main.c  math_util.c  tcf.c
scripts/: TCF  tcf.py  testing  tgc.py  tidy.sh
scripts/tgs/: garry.sav  pretty_print.py  tgs.py
source/: bootstrap.c  bootstrap.cpp  globals.c  main.c  main.cpp  math_util.c  minIni.c  utils.c
source/common/: ini.cpp  tdf.cpp
source/common/console_link/: console.cpp
source/common/errorbox/: error_box.cpp
source/common/tcf/: tcf.c  tcf.cpp
source/engine/: engine.c  engine_main.cpp  modules.cpp  settings.cpp
source/engine/Asset_Manager/: textures.cpp
source/engine/assets/: audio.cpp  fonts.cpp  textures.cpp
source/engine/common/: callback.cpp  callbacks.cpp  error_box.cpp  licences.cpp  shutdown.cpp  vfs.cpp
source/engine/fio/: dir_remove.c  tcf.c
source/engine/lua/: Lua.cpp  LuaAPI.cpp  asset_bindings.cpp  callback.cpp  ce.cpp  ce_funcs.cpp  data.cpp  input.cpp  lua.cpp  luaAPI.cpp  misc.cpp  primitives.cpp  raylib_bindings.cpp  time.cpp  window.cpp
source/engine/lua/assets/: asset_bindings.cpp  audio.cpp  fonts.cpp  textures.cpp
source/engine/modules/: CE_Background.c  fps.c
source/engine/modules/Lua/: CELua.C  CELua.c  lua_init.C
source/engine/modules/Lua/lua_funcs/: raylib_lua.c
source/engine/modules/settings/: settings.c
source/engine/modules/video_player/: vid_player.c
source/engine/plugins/: pluginAPI.cpp  plugins.cpp
source/engine/tex_man/: texture_manager.c
source/engine/ui/: debug-console.cpp  debug-ui.cpp  debug-win.cpp  startup_vid_player.c  widgets.cpp
source/engine/ui/main_menu/: main_menu_ui.c
source/engine/ui/settings_menu/: settings_ui.c
source/ui/: boot_vid.c  info_box.c  tgc.c
source/ui/tgc/: tgc.c
source/utils/: dir_remove.c  math_util.c  utils.c
